--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,29 @@
 .index-body {
-  color: white;
+  color: rgb(247, 139, 157);
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 50px;
+}
+.welcome {
   display: flex;
   justify-content: center;
+  color: #e74292;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin-top: 130px;
+}
+.birb {
+  height: 100px;
+  transition: all 1s ease 0s;
+}
+
+.birb:hover {
+  transition: all 1s ease 0s;
+  height: 500px;
+  cursor: pointer;
+}
+
+.index-body > h2 {
 }
