--- a/styles/random-stuff.css
+++ b/styles/random-stuff.css
@@ -1,1 +1,46 @@
+.texts {
+  color: white;
+  text-align: center;
+  border: 3px solid white;
+  border-radius: 25px;
+  margin: 25px;
+  padding: 45px;
+}
 
+.webapps-main {
+  margin: 15px;
+  padding: 0px 15px;
+  display: flex;
+}
+
+.webapps-container {
+  background: rgb(192, 255, 231);
+  margin: 15px;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid white;
+}
+.webapps-title {
+  text-align: center;
+  border-bottom: 1px solid black;
+  margin-bottom: 10px;
+}
+.webapps-title:hover {
+  color: rgb(206, 65, 206);
+}
+.webapps-link {
+  text-decoration: none;
+  color: black;
+}
+.webapps-img {
+  height: 360px;
+  border: 4px solid black;
+  border-radius: 10px;
+  margin: 0;
+  padding: 0;
+}
+
+.webapps-text {
+  border: 1px solid white;
+  text-align: center;
+}
